--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,8 @@ dependencies:
   cupertino_icons: ^1.0.2
   http: ^0.13.4
   url_launcher: ^6.0.12
+  pull_to_refresh: ^2.0.0
+  favorite_button: ^0.0.4
 
 dev_dependencies:
   flutter_test:
